--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
 
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <script src="test.js"></script>
+	<title>Basic Javascript Example</title>
+    
 
-<script>test.js</script>
+	
+	
+</head>
+
+<body>
+	
+	<p>This page just demonstrates including a basic JavaScript file. The JavaScript file just tells an alert box to pop up when the page loads.</p>
+    <p id="external">Hi</p>
+
+    <!-- This first -->
+    <script src="test.js"></script>
+    <script type="text/javascript">getInfoFromArray();</script>
+    
+
+</body>
+</html>
